--- a/wiki/de/BIM_Layers.html
+++ b/wiki/de/BIM_Layers.html
@@ -69,10 +69,10 @@
 <p>Die Implementierung von <a href="../de/Native_IFC.html" title="Native IFC/de">NativeIFC</a> ist noch in Arbeit. Benutzer k&ouml;nnen <a rel="nofollow" class="external text" href="https://yorik.uncreated.net/?blog%2Ffreecad">Yoriks Blog</a> lesen, um Aktualisierungen von einem leitenden Entwickler der NativeIFC-Funktionalit&auml;t in FreeCAD zu erhalten.
 </p>
 <h2><span class="mw-headline" id="Usage">Usage</span></h2>
-<ol><li>There are several ways to invoke the tool:
-<ul><li>Press the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=BIM_Layers.svg&amp;filetimestamp=20240608121601&amp;.html" class="mw-file-description"><img src="../File/BIM_Layers.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../BIM_Layers.html" title="BIM Layers">Manage Layers</a></span> button.</li>
-<li>Select the <b>Manage &rarr; <span typeof="mw:File"><a href="../index.php?title=BIM_Layers.svg&amp;filetimestamp=20240608121601&amp;.html" class="mw-file-description"><img src="../File/BIM_Layers.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Manage Layers</b> option from the menu.</li></ul></li>
-<li>Set options and press <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol>
+<ol><li>Es gibt mehrere M&ouml;glichkeiten, das Werkzeug aufzurufen:
+<ul><li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=BIM_Layers.svg&amp;filetimestamp=20240608121601&amp;.html" class="mw-file-description"><img src="../File/BIM_Layers.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ebenenverwaltung</a></span> dr&uuml;cken.</li>
+<li>Die Men&uuml;option <b>Manage &rarr; <span typeof="mw:File"><a href="../index.php?title=BIM_Layers.svg&amp;filetimestamp=20240608121601&amp;.html" class="mw-file-description"><img src="../File/BIM_Layers.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ebenenverwaltung</b> dr&uuml;cken.</li></ul></li>
+<li>Optionen einstellen und <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> dr&uuml;cken.</li></ol>
 <p>Refer to the documentation for <a href="../Draft_Layer.html" title="Draft Layer">Draft Layers</a> for more information on settings.
 </p>
 <h2><span class="mw-headline" id="Notes">Notes</span></h2>
@@ -129,15 +129,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115172459
+Cached time: 20260115172614
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.083 seconds
-Real time usage: 0.128 seconds
+CPU time usage: 0.091 seconds
+Real time usage: 0.197 seconds
 Preprocessor visited node count: 391/1000000
-Post&#8208;expand include size: 26025/2097152 bytes
-Template argument size: 9774/2097152 bytes
+Post&#8208;expand include size: 26034/2097152 bytes
+Template argument size: 9783/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -145,18 +145,18 @@ Unstrip post&#8208;expand size: 1118/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.736      1 -total
- 43.72%   11.688      1 Template:BIM_Tools_navi/de
- 20.97%    5.606      2 Template:Navigation_menu_2
- 15.87%    4.242      1 Template:GuiCommand/de
- 13.40%    3.584      2 Template:Docnav/de
-  8.84%    2.364      1 Template:Userdocnavi/de
-  7.24%    1.937      1 Template:Caption
-  4.35%    1.163      2 Template:Button
-  4.31%    1.153      1 Template:MenuCommand
+100.00%   37.400      1 -total
+ 31.55%   11.799      1 Template:BIM_Tools_navi/de
+ 21.56%    8.064      1 Template:GuiCommand/de
+ 16.77%    6.271      2 Template:Navigation_menu_2
+ 13.57%    5.077      2 Template:Docnav/de
+  9.87%    3.693      1 Template:Userdocnavi/de
+  8.56%    3.202      1 Template:MenuCommand
+  6.77%    2.531      1 Template:Caption
+  6.21%    2.323      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:239159-0!canonical and timestamp 20260115172458 and revision id 1738939. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:239159-0!canonical and timestamp 20260115172613 and revision id 1738941. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
