--- a/wiki/de/BIM_Layers.html
+++ b/wiki/de/BIM_Layers.html
@@ -73,9 +73,10 @@
 <ul><li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=BIM_Layers.svg&amp;filetimestamp=20240608121601&amp;.html" class="mw-file-description"><img src="../File/BIM_Layers.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ebenenverwaltung</a></span> dr&uuml;cken.</li>
 <li>Die Men&uuml;option <b>Manage &rarr; <span typeof="mw:File"><a href="../index.php?title=BIM_Layers.svg&amp;filetimestamp=20240608121601&amp;.html" class="mw-file-description"><img src="../File/BIM_Layers.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ebenenverwaltung</b> dr&uuml;cken.</li></ul></li>
 <li>Optionen einstellen und <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> dr&uuml;cken.</li></ol>
-<p>Refer to the documentation for <a href="../Draft_Layer.html" title="Draft Layer">Draft Layers</a> for more information on settings.
+<p>Weitere Informationen zu den Einstellungen sind in der Dokumentation zu <a href="../de/Draft_Layer.html" title="Draft Layer/de">Draft Ebenen</a> zu finden.
+</p><p><span id="Notes"></span>
 </p>
-<h2><span class="mw-headline" id="Notes">Notes</span></h2>
+<h2><span class="mw-headline" id="Hinweise">Hinweise</span></h2>
 <ul><li>Use the <a href="../BIM_Layers.html" title="BIM Layers">BIM Layers Manager</a> to create new BIM Layers. To create <a href="../Draft_Layer.html" title="Draft Layer">Draft Layers</a> press the <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Draft_tray_button_layer.png&amp;filetimestamp=20210724134408&amp;.html" class="mw-file-description"><img src="../File/Draft_tray_button_layer.png" decoding="async" width="73" height="22" class="mw-file-element" data-file-width="73" data-file-height="22"></a></span> button on the <a href="../Draft_Tray.html" title="Draft Tray">Draft Tray</a>.</li>
 <li><a href="../Draft_Layer.html" title="Draft Layer">Draft Layers</a> have slightly different settings from BIM Layers. Do not mix them unless you understand the <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?t=102246">differences</a>.</li></ul>
 <p><br>
@@ -129,13 +130,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115172614
+Cached time: 20260115172644
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.091 seconds
-Real time usage: 0.197 seconds
-Preprocessor visited node count: 391/1000000
+CPU time usage: 0.096 seconds
+Real time usage: 0.219 seconds
+Preprocessor visited node count: 392/1000000
 Post&#8208;expand include size: 26034/2097152 bytes
 Template argument size: 9783/2097152 bytes
 Highest expansion depth: 6/100
@@ -145,18 +146,18 @@ Unstrip post&#8208;expand size: 1118/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   37.400      1 -total
- 31.55%   11.799      1 Template:BIM_Tools_navi/de
- 21.56%    8.064      1 Template:GuiCommand/de
- 16.77%    6.271      2 Template:Navigation_menu_2
- 13.57%    5.077      2 Template:Docnav/de
-  9.87%    3.693      1 Template:Userdocnavi/de
-  8.56%    3.202      1 Template:MenuCommand
-  6.77%    2.531      1 Template:Caption
-  6.21%    2.323      2 Template:Button
+100.00%   54.026      1 -total
+ 38.53%   20.814      1 Template:BIM_Tools_navi/de
+ 22.12%   11.953      2 Template:Navigation_menu_2
+ 21.98%   11.873      1 Template:Caption
+  9.09%    4.911      1 Template:MenuCommand
+  9.06%    4.893      2 Template:Button
+  7.25%    3.916      1 Template:GuiCommand/de
+  6.33%    3.419      1 Template:Userdocnavi/de
+  5.89%    3.184      2 Template:Docnav/de
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:239159-0!canonical and timestamp 20260115172613 and revision id 1738941. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:239159-0!canonical and timestamp 20260115172644 and revision id 1738945. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
