--- a/wiki/de/Macro_Half-Hull_Model.html
+++ b/wiki/de/Macro_Half-Hull_Model.html
@@ -349,20 +349,17 @@ Vielleicht ist es mit sieben Skizzen (eine in der YZ-Ebene, eine in der XY-Ebene
 </p>
 <h2><span class="mw-headline" id="Beispieldateien">Beispieldateien</span></h2>
 <p>Diese Dateien sind Beispiele f&uuml;r Skizzen-Daten, die mit dem Makro verwendet werden k&ouml;nnen. Es handelt sich dabei haupts&auml;chlich um die Modelle f&uuml;r die Bildschirmaufnahmen im Abschnitt Optionen oben. Die Dateien funktionieren mit dem Makro und k&ouml;nnen daher heruntergeladen und an die spezifischen Anforderungen angepasst werden. Das Pr&auml;fix 5x3 (zum Beispiel) bedeutet, dass das Modell 5 Querschnitte und 3 Liniensegmente pro Querschnitt (d. h. Skizze) hat.
+</p><p>Um eine der Beispieldateien zu verwenden, mit der rechten Maustaste auf den Dateilink klicken und im Men&uuml; Datei speichern unter... w&auml;hlen. Der Dateiname wird angegeben. Den gew&uuml;nschten Ordner/das gew&uuml;nschte Verzeichnis w&auml;hlen, in dem die Beispieldatei gespeichert werden soll.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>To use one of the example files, right-click on the file link and select Save File As... from the menu. The filename will be specified, choose the desired folder/directory to hold the example file.
-</p>
-<ul><li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/Examples/raw/master/Half_Hull_Macro_ExampleFiles/3x1.FCStd?raw=true%7C">3x1 hull</a> with the minimum number of Sketches (stemline, one cross-section, transom) with 1 line segment per Sketch &lt;&lt;&lt;&lt;&lt; NOT CURRENTLY WORKING</li>
-<li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/Examples/raw/master/Half_Hull_Macro_ExampleFiles/5x3%20bowNormal.FCStd?raw=true%7C">5x3 with normal bow</a></li>
-<li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/Examples/raw/master/Half_Hull_Macro_ExampleFiles/5x3%20bowTrireme.FCStd?raw=true%7C">5x3 with trireme bow</a></li>
-<li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/Examples/raw/master/Half_Hull_Macro_ExampleFiles/5x3%20sternCanoeStern.FCStd?raw=true%7C">5x3 with canoe stern</a></li>
-<li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/Examples/raw/master/Half_Hull_Macro_ExampleFiles/5x3%20sternSheerTransom.FCStd?raw=true%7C">5x3 with sheer transom stern</a></li>
-<li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/Examples/raw/master/Half_Hull_Macro_ExampleFiles/5x3%20sternSugarScoop.FCStd?raw=true%7C">5x3 with sugar scoop stern</a></li>
-<li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/Examples/raw/master/Half_Hull_Macro_ExampleFiles/5x5%20workboat.FCStd?raw=true%7C">5x5 workboat</a></li>
-<li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/Examples/raw/master/Half_Hull_Macro_ExampleFiles/7x5%20pirate.FCStd?raw=true%7C">7x5 pirate boat</a></li>
-<li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/Examples/raw/master/Half_Hull_Macro_ExampleFiles/12x3%20halfHullS.FCStd?raw=true%7C">12x3 sailing yacht</a></li></ul>
-</div>
+<ul><li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/Examples/raw/master/Half_Hull_Macro_ExampleFiles/3x1.FCStd?raw=true%7C">3x1 H&uuml;lle</a> mit der minimalen Anzahl von Skizzen (Stammlinie, ein Querschnitt, Querbalken) mit 1 Liniensegment pro Skizze &lt;&lt;&lt;&lt;&lt; FUNKTIONIERT DERZEIT NICHT</li>
+<li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/Examples/raw/master/Half_Hull_Macro_ExampleFiles/5x3%20bowNormal.FCStd?raw=true%7C">5x3 mit normalem Bug</a></li>
+<li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/Examples/raw/master/Half_Hull_Macro_ExampleFiles/5x3%20bowTrireme.FCStd?raw=true%7C">5x3 mit Trireme-Bug</a></li>
+<li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/Examples/raw/master/Half_Hull_Macro_ExampleFiles/5x3%20sternCanoeStern.FCStd?raw=true%7C">5x3 mit Kanuheck</a></li>
+<li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/Examples/raw/master/Half_Hull_Macro_ExampleFiles/5x3%20sternSheerTransom.FCStd?raw=true%7C">5x3 mit durchsichtigem Heckspiegel</a></li>
+<li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/Examples/raw/master/Half_Hull_Macro_ExampleFiles/5x3%20sternSugarScoop.FCStd?raw=true%7C">5x3 mit Zuckerschaufel Heck</a></li>
+<li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/Examples/raw/master/Half_Hull_Macro_ExampleFiles/5x5%20workboat.FCStd?raw=true%7C">5x5 Arbeitsschiff</a></li>
+<li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/Examples/raw/master/Half_Hull_Macro_ExampleFiles/7x5%20pirate.FCStd?raw=true%7C">7x5 Piratenschiff</a></li>
+<li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/Examples/raw/master/Half_Hull_Macro_ExampleFiles/12x3%20halfHullS.FCStd?raw=true%7C">12x3 Segelyacht</a></li></ul>
 <p><span id="Remarks"></span>
 </p>
 <h2><span class="mw-headline" id="Anmerkungen">Anmerkungen</span></h2>
@@ -512,13 +509,13 @@ Vielleicht ist es mit sieben Skizzen (eine in der YZ-Ebene, eine in der XY-Ebene
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260110155023
+Cached time: 20260115173155
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.125 seconds
-Real time usage: 0.234 seconds
-Preprocessor visited node count: 241/1000000
+CPU time usage: 0.124 seconds
+Real time usage: 0.206 seconds
+Preprocessor visited node count: 240/1000000
 Post&#8208;expand include size: 2902/2097152 bytes
 Template argument size: 975/2097152 bytes
 Highest expansion depth: 5/100
@@ -528,13 +525,13 @@ Unstrip post&#8208;expand size: 1953/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.933      1 -total
- 44.66%    5.776      1 Template:Macro/de
- 33.50%    4.332      1 Template:Codeextralink
- 17.58%    2.274      1 Template:Clear
+100.00%    8.694      1 -total
+ 41.35%    3.595      1 Template:Macro/de
+ 36.77%    3.197      1 Template:Codeextralink
+ 16.82%    1.462      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:226691-0!canonical and timestamp 20260110155023 and revision id 1731116. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:226691-0!canonical and timestamp 20260115173155 and revision id 1738959. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
